--- a/index.html
+++ b/index.html
@@ -11,12 +11,28 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
+        <link rel="icon" href="favicon.svg" ">
+        <link rel="apple touch" href="apple-touch-icon.png">
+        <link rel="google touch" href="google-touch-icon.png">
     </head>
     <body>
         <header class="o-row">
             <div class="o-container">
-                <h1>
-                    Flatiron
+                <h1 class="c-logo">
+                    <svg class="c-logo__symbol" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="32" height="32" viewBox="0 0 32 32">
+                        <defs>
+                          <clipPath id="clip-favicon">
+                            <rect width="32" height="32"/>
+                          </clipPath>
+                        </defs>
+                        <g id="favicon" clip-path="url(#clip-favicon)">
+                          <g id="mark" transform="translate(2)">
+                            <path id="Path_1" data-name="Path 1" d="M15.659,17.25v16l13.543-8v-16Z" transform="translate(-2.116 -1.25)" fill="#3887f7" fill-rule="evenodd"/>
+                            <path id="Path_2" data-name="Path 2" d="M13.543,0,0,8V24l13.543-8Z" fill="#5051db" fill-rule="evenodd"/>
+                          </g>
+                        </g>
+                      </svg>
+                      Flatiron
                 </h1>
                 <nav>
                     <ul>
